fix: Align back button to left 💄

--- a/src/styles/application.css
+++ b/src/styles/application.css
@@ -7,7 +7,7 @@
 }
 
 .sto-app-back {
-  display: flex;
+  display: inline-flex;
   align-items: center;
   margin-top: 1.5rem;
   text-decoration: none;
